--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/img/logo.png">
 </head>
-<body>
+<body style="background-color: var(--surface-d)">
   <app-root></app-root>
 </body>
 </html>
