--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/img/logo.png">
 
+  <link id="app-theme" rel="stylesheet" type="text/css" href="lara-dark-teal.css" />
+
   <!-- FONTAEWSOME ICONS-->
   <script src="https://kit.fontawesome.com/665cf3e523.js" crossorigin="anonymous"></script>
 
