Cambios de Jesus en registro.component.html, filtros.component.html e index.html

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
 
 </head>
-<body style="background-color: var(--surface-d)">
+<body style="background-color: var(--surface-500)">
   <app-root></app-root>
 </body>
 </html>
